--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+/server/node_modules
 /.pnp
 .pnp.js
 
@@ -10,6 +11,10 @@
 
 # production
 /build
+/server/mlm-realty.db
+/server/mlm-realty.db-shm
+/server/mlm-realty.db-wal
+.env
 
 # misc
 .DS_Store
